@@ -6988,6 +6988,19 @@ name|deadRegions
 init|=
 literal|null
 decl_stmt|;
+name|List
+argument_list|<
+name|HRegionInfo
+argument_list|>
+name|rits
+init|=
+operator|new
+name|ArrayList
+argument_list|<
+name|HRegionInfo
+argument_list|>
+argument_list|()
+decl_stmt|;
 synchronized|synchronized
 init|(
 name|this
@@ -6995,14 +7008,12 @@ operator|.
 name|regions
 init|)
 block|{
-name|deadRegions
-operator|=
-operator|new
-name|TreeSet
+name|List
 argument_list|<
 name|HRegionInfo
 argument_list|>
-argument_list|(
+name|assignedRegions
+init|=
 name|this
 operator|.
 name|servers
@@ -7011,6 +7022,33 @@ name|remove
 argument_list|(
 name|hsi
 argument_list|)
+decl_stmt|;
+if|if
+condition|(
+name|assignedRegions
+operator|==
+literal|null
+operator|||
+name|assignedRegions
+operator|.
+name|isEmpty
+argument_list|()
+condition|)
+block|{
+comment|// No regions on this server, we are done, return empty list of RITs
+return|return
+name|rits
+return|;
+block|}
+name|deadRegions
+operator|=
+operator|new
+name|TreeSet
+argument_list|<
+name|HRegionInfo
+argument_list|>
+argument_list|(
+name|assignedRegions
 argument_list|)
 expr_stmt|;
 for|for
@@ -7035,19 +7073,6 @@ block|}
 comment|// See if any of the regions that were online on this server were in RIT
 comment|// If they are, normal timeouts will deal with them appropriately so
 comment|// let's skip a manual re-assignment.
-name|List
-argument_list|<
-name|HRegionInfo
-argument_list|>
-name|rits
-init|=
-operator|new
-name|ArrayList
-argument_list|<
-name|HRegionInfo
-argument_list|>
-argument_list|()
-decl_stmt|;
 synchronized|synchronized
 init|(
 name|regionsInTransition
